deploy/kubernetes/namespace.yaml
# Copyright (c) 2026 H0llyW00dzZ All rights reserved.
#
# By accessing or using this software, you agree to be bound by the terms
# of the License Agreement, which you can find at LICENSE files.

apiVersion: v1
kind: Namespace
metadata:
  name: grpc-template
  labels:
    app: grpc-template
